environments/dev/testapp/patches/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapp
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: testapp
