environments/dev/testapp/patches/resource-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapp
spec:
  template:
    spec:
      containers:
      - name: testapp
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
