environments/dev/testapp/patches/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testapp
spec:
  rules:
  - host: dev.testapp.davidsugianto.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: testapp
            port:
              number: 80
